fix title spacing

--- a/src/assets/menu.css
+++ b/src/assets/menu.css
@@ -94,7 +94,6 @@
   color: rgb(110, 69, 59);
   font-size: 2rem;
   font-weight: bold;
-  margin: 0px;
   z-index: 3;
 }
 
